# Advent2019

./: .gitignore  CMakeLists.txt  Example.cpp  Example.hpp  TODO.md  TODO.txt  VSCodeAdvent.code-workspace
days/2015/: Day01.cpp  Day01.hpp
days/2018/: Day01.cpp  Day01.hpp
days/2019/: Day01.cpp  Day01.hpp  Day02.cpp  Day02.hpp  Day03.cpp  Day03.hpp  Day04.cpp  Day04.hpp  Day05.cpp  Day05.hpp  Day06.cpp  Day06.hpp
days/2019/input/: day05.txt
framework/: Day.hpp  Input.cpp  Input.hpp
test/: CMakeLists.txt  ExampleTests.cpp  Framework.cpp  Year2015.cpp  Year2015Tests.cpp  Year2018.cpp  Year2019.cpp  Year2019Tests.cpp
